styles/products/productListStyles.module.css
#shopingListPage {
    border: black solid 1px;
    border-radius: 10px;
    margin: min(30px, 5vw);
    justify-content: center;
    padding: 10px;
    display: flex;
    flex-wrap: wrap;
    z-index: 1;
}

.shopProduct {
    margin: 10px;
    width: 320px;
    height: 400px;
    padding: 8px;
    border-radius: 3px;
    display: flex;
    transition-duration: 0.5s;
}


/* 
h2, h3, p {
    margin: 0;
} */

.sizedText {
    text-align: justify;
    display: -webkit-box;
    -webkit-line-clamp: 5;
    -webkit-box-orient: vertical;
    overflow: hidden;
    transition-delay: 200ms;
}

.productPreview {
    height: 200px;
    width: 301px;
    object-fit: cover;
}

.priceTag {
    font-size: x-large;
    margin: 0;
}

.productTitle {
    font-size: xx-large;
    margin: 0;
}


.productDetailBox {
    width: 100%;
    height: 100%;
    padding: max(3vh, 70px) 3vw 2vh 3vw;
    justify-content: center;
    display: flex;
}

.productDetailContent {
    text-align: justify;
    float: none;
    margin-bottom: 10vh;
}

.parent {
    display: flex;
    justify-content: center;
}

.animationDiv {
    width: 50%;
}

.details {
    display: flex;
    width: 25%;
    flex-direction: column;
    justify-content: space-between;
}

@media screen and (max-width: 786px) {
    .details {
        width: 100%;
    }

    .productDetailImages {
        width: 100%;
        margin: 1vh;
    }

    .animationDiv {
        width: 100%;
    }

    .images {
        width: 100%;
    }

    .parent {
        flex-direction: column;
        align-items: center;
        width: 100%;
    }

    .imageSlider {
        width: 100%;
    }

    .productDetailImages {
        width: 100%;
    }
}

.productDetailImages {
    justify-content: center;
    padding: 0;
    float: left;
    margin: 0 3vw 3vh 0;
    -webkit-margin-collapse: collapse;
}

.productDetailBottomPrice {
    font-size: 5vh;
    display: inline-table;
}

.productDetailBottomButton {
    display: table-cell;
}

.productDetailHeader {
    font-size: xxx-large;
    line-height: 1;
    max-width: 90vw;
}

.productDetailDescription {
    font-size: large;
}

.carousel-control-next-icon,
.carousel-control-prev-icon {
    background-color: rgba(0, 0, 0, .2);
    box-shadow: 0 0 10px 10px rgba(0, 0, 0, .2);
}

.productDetailBottomContainer {
    justify-content: space-evenly;
    display: flex;
    padding: 2vh;
}

.productDetailBottomBox {
    background-color: white;
    position: fixed;
    bottom: 0;
    right: 0;
    left: 0;
    z-index: 100;
}

.extra {
    resize: none;
    height: 100px;
}

